@@ -1,6 +1,7 @@
 * 2013-12-06 - thorben.betten@open-xchange.com
 
  - Fix for bug 30190: Fixed parsing of CLI call
+ - Fix for bug 29729: Ignore possible "404 Not Found" HTTP error if S3 bucket is supposed to be deleted anyway
 
 * 2013-12-05 - tobias.friedrich@open-xchange.com
 
